[Web Payments] Split address to 2 lines in editors

Bug: 735103
Change-Id: I866deb96d012a45354f374fc9d12f7d43c0647f4